src/css/doc.css
/* ... */
.badge-button:hover {
  background-color: var(--link-highlight-color);
  color: white;
  cursor: pointer;
}

.badge-button img {
  margin-left: 5px;
  margin-bottom: -2px;
  filter: var(--svg-dark-mode-filter);
}

.doc .two-column-grid {
  display: grid;
  grid-template-columns: 0.5fr 0.5fr 0.5fr;
}

.doc .component-card {
  background-color: var(--panel-background);
  border: 1px solid var(--page-version-menu-background);
  border-radius: 0.4rem;
  display: inline-block;
  margin: 3px;
  padding: 0.3em 0.3em;
  color: var(--body-font-color);
  text-decoration: none;
}

.doc .component-card:hover {
  color: var(--link-highlight-color);
  text-decoration: none;
}

.doc .choices {
  overflow: visible;
  border-radius: 10px;
  margin-bottom: 0;
  flex: 0.5;
}

.doc .choices:first-of-type {
  flex: 100%;
}

.doc .metadata-block {
  display: flex;
  flex-direction: column;
  margin-top: 1.3rem;
  gap: 6px;
  border-radius: 6px;
  background-color: var(--note-background);
  color: var(--note-on-color);
}

.doc .metadata-block .choices {
  flex: 0.3;
}

.metadata-block .choices__list--dropdown .choices__item,
.metadata-block .choices__list[aria-expanded] .choices__item {
  padding: 5px 0 0 5px !important;
  height: 30px;
}

.doc .tableblock td .enterprise-label-container {
  display: flex;
}

.doc .tableblock td .enterprise-label {
  background-color: var(--redpanda-1000);
  color: #fff;
  padding: 0.2em 0.2em;
  line-height: normal;
  border-radius: 3px;
  font-size: calc(17 / var(--rem-base) * 1rem);
}

.doc .inline-enterprise-label {
  background-color: var(--redpanda-1000);
  color: #fff;
  padding: 0.2em 0.2em;
  border-radius: 3px;
  font-size: calc(17 / var(--rem-base) * 1rem);
}

.doc .tableblock td .enterprise-label-container:hover,
.doc .tableblock td .enterprise-label {
  cursor: pointer;
}

.doc .choices__inner {
  background-color: var(--body-background);
  min-height: unset;
  border-radius: 4px;
}

.doc .metadata-block .choices__inner {
  height: 30px;
  padding: unset;
}

.doc .choices__input {
  background-color: var(--body-background);
}

.doc .tableblock .choices__list--single {
  padding: 0;
}

.doc .tableblock .choices__list--dropdown,
.doc .tableblock .choices__list[aria-expanded],
.doc .choices__list--dropdown,
.doc .choices__list[aria-expanded="true"] {
  background-color: var(--body-background);
  color: var(--body-font-color);
}

.doc .page-type-dropdown .choices[data-type*=select-one] .choices__inner {
  padding: 0;
}

.doc .page-type-dropdown {
  display: flex;
  margin-top: 10px;
  gap: 5px;
  align-items: center;
}

.doc .page-type-dropdown .choices {
  flex: 0.3;
}

.back-to-top {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 150px;
}

.doc .button-bar {
  display: flex;
  gap: 10px;
  margin-top: 10px;
  margin-bottom: 10px;
  flex-wrap: wrap;
}

.doc .doc-button {
  border: 1px solid rgba(128, 152, 249, 1);
  padding: 6px 8px;
  background: rgba(68, 76, 231, 0);
  border-radius: 6px;
  color: var(--body-font-color);
  margin-top: 0;
  cursor: pointer;
  font-size: calc(15 / var(--rem-base) * 1rem);
  transition: 'background 0.3s';
}

.doc .doc-button:hover {
  background: rgba(68, 76, 231, 0.06);
  color: var(--body-font-color);
}

html[data-theme=dark] .doc .doc-button:hover {
  background: rgba(68, 76, 231);
  color: var(--body-font-color);
}

.button-arrow-up:hover::after {
  background-image: url(../img/arrow-cta-hover.svg);
  top: -6px;
}

.button-arrow-up::after,
.button-arrow-up:hover::after {
  height: 15px;
  margin-left: 4px;
  -webkit-transform: rotate(-90deg);
  transform: rotate(-90deg);
  width: 18px;
}

.button-arrow-up::after {
  background-image: url(../img/arrow-cta.svg);
  background-position: -1px 0;
  background-repeat: no-repeat;
  content: "";
  display: inline-block;
  position: relative;
  top: 0;
  -webkit-transition: top 0.5s ease-in-out;
  transition: top 0.5s ease-in-out;
}

.button-arrow:active,
.button-arrow:focus,
.button-arrow:hover {
  color: var(--link_hover-font-color);
  text-decoration: none;
}

a.button-arrow {
  color: var(--link-highlight-color);
  text-decoration: none;
}

.doc .choices__list--dropdown .choices__item--selectable.is-highlighted,
.doc .choices__list[aria-expanded] .choices__item--selectable.is-highlighted {
  background-color: var(--panel-background);
}

.doc .choices__placeholder {
  opacity: 9;
  font-size: calc(15 / var(--rem-base) * 1rem);
}

.doc .type-dropdown {
  border-radius: 10px;
  padding: 5px;
  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
  border: 1px solid #ccc;
  background-color: var(--body-background);
  color: var(--body-font-color);
}

@media (max-width: 768px) {
  .doc .choices {
    width: 100%; /* Ensure inputs take full width on small screens */
  }
}

.doc .tableblock.component-table {
  margin-top: 1rem;
}

img.dark-mode-filter,
.nav .nav-image img.dark-mode-filter {
  filter: var(--svg-dark-mode-filter);
}

.doc .nav-image,
.nav .nav-image {
  color: inherit;
  padding-left: 0;
  display: flex;
  gap: 10px;
  align-items: center;
}

.doc .nav-image::after,
.nav .nav-image::after {
  content: none !important;
}

.badge-button a:hover {
  text-decoration: none;
  color: white;
}

.badge-button a {
  color: inherit;
  text-decoration: none;
}

.badge-container {
  display: flex;
  gap: 10px;
}

.doc .dropdown {
  position: relative;
  display: inline-block;
  cursor: pointer;
  font-size: medium;
}

.doc .terminal-icon {
  width: 20px;
  height: 18px;
  border: 1px solid black;
  position: relative;
  border-radius: 3px;
  background-color: #333;
}

.doc .terminal-icon::after {
  content: '>_';
  color: white;
  font-size: calc(12 / var(--rem-base) * 1rem);
  position: absolute;
  left: 3px;
  bottom: 2px;
}
/* ... */

